Use the new statics interface to get APM stats from WebRTC

This also includes the new residual echo likelihood stat.

BUG=chromium:668632,webrtc:6525

Review-Url: https://codereview.chromium.org/2527193002
Cr-Commit-Position: refs/heads/master@{#434493}

Former-commit-id: b5bc4a4e2967f50790fb378c14d1af668b350448